# avicat

./: .gitignore  crypto_main.py  infer_all_checkpoints.py  infer_crypto_states.py  main.py  plot_crypto_states.py  pyproject.toml  readme.md  readme.tex  train.py  trainer.py
avicat/analysis/: anackpt.py  anall.py  analyze_pnl_by_state.py
avicat/data/: crypto_dataset.py  preprocess.py  synth_dataset.py
avicat/inference/: infer_all_checkpoints.py
avicat/models/: model.py
avicat/training/: crypto_main.py  crypto_trainer.py
configs/: config.yaml  crypto_config.yaml
processed_data/: metadata.json  test_data.npz  val_data.npz
